--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,12 @@
   }
 }
 
-body {
+* {
+  font-family: monospace;
+}
+
+body, html {
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
