--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,8 @@
 }
 
 body, html {
+  color-scheme: light !important;
+  scroll-behavior: smooth;
   overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
